Deploying code from GithubProfile workflow

--- a/assets/projects.json
+++ b/assets/projects.json
@@ -10,7 +10,7 @@
       "title" : "Project Title ",
       "tech" : "Java, Spring Boot",
       "description" : "Mandlebrot Renderer is a Java application that visually renders teh Mandelbrot set using JFrame. This prooject offers an interactive experience for exploring one of the most famous fractals in mathematics. The Mandelbrot set is a set of complex numbers that produces intricate and infinitely detailed patterns, showcasing the beauty and complexity of mathematical structures.",
-      "readmeUrl" : "https://raw.githubusercontent.com/VishalRana2015/GithubProfile/master/README.md"
+      "readmeUrl" : "../assets/readme/mandelbrot.md"
     }
   ]
 }
